--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,63 @@ body {
 .card {
   width: 400px;
   background: #fff;
+
   margin: 16px auto;
+  padding: 8px;
+
+  margin-bottom: 8px;
 }
 
 .title {
   background: #e3f4ff;
+
+  font-size: 16px;
+
+  padding:8px;
+
+  margin-bottom: 8px;
+
 }
 
 .content {
   background: #e3f4ff;
+
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+
+  margin-bottom: 8px;
 }
 
 .button-container {
+  
+  display: block;
+  
   background: #e3f4ff;
+
+  text-align: center;
+
+  padding: 8px;
+  margin-bottom: 8px;
 }
 
 button {
+  
+  display: block;
+
   background: white;
   border: 1px solid #eee;
+ 
+  text-align: center;
+
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
+
+  /*  padding: 8px 24px; top&bot=8, l&r=24 INSTEAD OF padding-left & right */
+
+  margin:auto; /* Centre's the div */
+ 
 }
