--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,11 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+
+  display: grid;
+  grid-template-columns: 250px 600px; /* 2 cols */
+  grid-template-rows: 50px, 50px, 100px, 50px; /* 4 rows */
+  gap: 10px;
 }
 
 .container div {
@@ -17,18 +22,25 @@ body, html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+
 }
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1/3; /* |col1|col2| = 3 lines => col start 1 / col start 3; */
+  /* OR -1/1 .spans across the whole page */
 }
 
 .sidebar {
   background-color: #FF7755;
+
+  grid-row: 2/4;
+
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2/3;
 }
 
 .article {
@@ -44,4 +56,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+
+  grid-column: 1/3; /* or 1/-1; */
 }
